# funding-service-design-fund-store

./: .dockerignore  .env.development  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  compose.override.yml  create_call_graph.py  dev-requirements.in  docker-compose.yml  hsra_r1_field_info_en.json  manifest.yml  project.toml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  scatch.py  tasks.py  wsgi.py
.devcontainer/: devcontainer.json
api/: routes.py
apis/: __init__.py  default_api.py  dummy_dao.py  fund_api.py  fund_api_models.py  fund_api_routes.py  fund_store_dao.py  fund_store_dummy_data.py  fund_store_orm.py
app/: __init__.py
copilot/: .workspace
core/: app.py  dummy_dao.py  fund_round_dao.py  funds.py  rounds.py
db/: README  queries.py
openapi/: api.yml  components.yml
scripts/: amend_round_dates.py  cof_r3_section_config.py  generate_all_questions.py  load_all_fund_rounds.py  load_cof_config.py  load_cof_r2.py  load_cof_r3w1.py  load_cof_r3w2.py  load_cyp_r1.py  load_ns_r1.py  load_ns_r2.py  migration-task-script.py  patch_cof_r3w1_section_names.py  read_forms.py  sort_application_sections.py  sort_assessment_sections.py  what_to_do_with_output.py
sql/: blue.sql  purple.sql
src/: requirements.in
tests/: conftest.py  test_cof_data.py  test_data.py  test_data_fund_round.py  test_data_sections.py  test_data_update_scripts.py  test_db_routes.py  test_db_structure.py  test_eoi_schema.py  test_funds.py  test_generate_all_questions.py  test_get_routes.py  test_pass.py  (+3 more)
(+200 files in other folders)
