[project]
name = "funding-service-design-fund-store"
version = "0.1.1"
description = "The funding service design fund store for the DLUHC."
authors = ["Version One", "HM Government, Department of Levelling Up, Housing and Communities"]
license = "MIT License"

requires-python = ">=3.10, <3.11"
dependencies = [
    "airium>=0.2.6",
    "bs4>=0.0.2",
    "connexion[flask,swagger-ui,uvicorn]>=3.1.0",
    "flask-json==0.4.0",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "flask==3.0.3",
    "funding-service-design-utils>=5.0.8,<6.0.0",
    "marshmallow-sqlalchemy==1.0.0",
    "openapi-spec-validator>=0.7.1",
    "prance>=23.6.21.0",
    "psycopg2-binary==2.9.9",
    "pytest-html>=3.2.0",
    "pytest-mock==3.14.0",
    "sqlalchemy-json==0.7.0",
    "sqlalchemy-utils==0.41.2",
    "sqlalchemy[mypy]>=2.0.30",
    "swagger-ui-bundle==1.1.0",
    "uvicorn==0.30.1",
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = ['E203', 'W503']
count = true
exclude = ['config/fund_loader_config/FAB/*']

[tool.isort]
profile = "black"
force_single_line = "true"

[tool.uv]

[dependency-groups]
dev = [
    "asserts==0.11.1",
    "black>=24.4.2",
    "colored>=2.2.4",
    "debugpy>=1.8.1",
    "deepdiff>=7.0.1",
    "flake8-pyproject>=1.2.3",
    "invoke>=2.2.0",
    "json2html==1.3.0",
    "pre-commit~=4.0.0",
    "pytest>=8.2.2",
    "pytest-env>=1.1.3",
    "pytest-flask>=1.3.0",
    "pytest-mock==3.14.0",
]
